--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,12 @@
     <div class="z-50 fixed bg-white px-4 py-1 w-screen items-center flex flex-col md:flex-row">
         <div class="m-auto md:m-0 xl:m-auto">
             <a routerLink='/'>
-                <span class="font-sil text-2xl">ESIA </span><span class="font-arvo">| Art Gallery</span>
+                <span class="font-sil text-2xl">
+                    ESIA 
+                </span>
+                <span class="font-arvo">
+                    | Art Gallery
+                </span>
             </a>
         </div>
         <div class="w-full md:w-auto md:absolute md:right-5">
