feat(FE): :sparkles: Implement simple error handling

--- a/client/src/app/components/artists/artist-single/artist-single.component.html
+++ b/client/src/app/components/artists/artist-single/artist-single.component.html
@@ -110,10 +110,15 @@ class="text-center mt-4 lg:mt-8">
     </div>
 </div>
 <div
-*ngIf="!art && !artist"
+*ngIf="!art && !artist && !error"
 class="flex justify-center w-[1000px]">
     <ngx-skeleton-loader 
     count="5"
     appearance="circle">
     </ngx-skeleton-loader>
+</div>
+<div
+*ngIf="error"
+class="flex justify-center w-[1000px] mt-10">
+    {{error.message}}
 </div>
