--- a/client/src/app/components/exhibitions/exhibitions.component.html
+++ b/client/src/app/components/exhibitions/exhibitions.component.html
@@ -33,7 +33,12 @@
     </div>
 </div>
 <div
-*ngIf="!exhibitions"
+*ngIf="!exhibitions && !error"
 class="flex justify-center w-[1000px]">
     <ngx-skeleton-loader count="5" appearance="circle"></ngx-skeleton-loader>
+</div>
+<div
+*ngIf="error"
+class="flex justify-center w-[1000px] mt-10">
+    {{error.message}}
 </div>
