--- a/client/src/app/components/artists/artists.component.html
+++ b/client/src/app/components/artists/artists.component.html
@@ -33,10 +33,15 @@
     </div>
 </div>
 <div
-*ngIf="!artists"
+*ngIf="!artists && !error"
 class="flex justify-center w-[1000px]">
     <ngx-skeleton-loader 
     count="5" 
     appearance="circle">
     </ngx-skeleton-loader>
+</div>
+<div
+*ngIf="error"
+class="flex justify-center w-[1000px] mt-10">
+    {{error.message}}
 </div>
