--- a/client/src/app/components/exhibitions/exhibition-single/exhibition-single.component.css
+++ b/client/src/app/components/exhibitions/exhibition-single/exhibition-single.component.css
@@ -1,5 +1,5 @@
 .mat-mdc-button{
     font-size: 16px;
-    border-bottom: 4px solid black !important;
+    border-bottom: 4px solid rgb(4 47 46) !important;
     padding: 24px !important;
 }
