--- a/client/src/app/components/collection/collection-single/collection-single.component.css
+++ b/client/src/app/components/collection/collection-single/collection-single.component.css
@@ -9,9 +9,9 @@
     height:auto !important;
 }
 ::ng-deep .ngxImageZoomLensEnabled {
-    border: 4px solid black !important;
+    border: 4px solid rgb(4 47 46) !important;
 }
 .mat-mdc-button{
     font-size: 14px;
-    border-bottom: 4px solid black !important;
+    border-bottom: 4px solid rgb(4 47 46) !important;
 }
