--- a/client/src/app/components/collection/collection.component.html
+++ b/client/src/app/components/collection/collection.component.html
@@ -3,14 +3,14 @@
     *ngFor="let style of styles">
         <a href="/collection/{{style.id}}">
             <div *ngIf="style.banner"
-            class="border-l-4 border-black overflow-hidden flex flex-col group my-4 mx-auto w-[350px] md:w-[300px] z-20">
+            class="bg-teal-50 hover:bg-teal-300 transition duration-200 border-l-4 border-teal-950 overflow-hidden flex flex-col group my-4 mx-auto w-[350px] md:w-[300px] z-20">
                 <div 
-                class="flex self-center border-l-4 border-black h-[550px] w-[1000px]">
+                class="flex self-center border-l-4 border-teal-950 h-[550px] w-[1000px]">
                     <img class="m-auto h-[550px]" src="{{style.banner}}"/>
                 </div>
                 <div 
-                class="border-b-4 border-black p-4 text-center bg-white w-[350px] md:w-[300px] h-fit">
-                    <div class="pb-3 border-b-2 border-black">
+                class="border-b-4 border-teal-950 p-4 text-center w-[350px] md:w-[300px] h-fit">
+                    <div class="pb-3 border-b-2 border-teal-950">
                         <div class="font-semibold p-1">{{style.title}}</div>
                     </div>
                 </div>
