--- a/client/src/app/components/gallery/gallery.component.css
+++ b/client/src/app/components/gallery/gallery.component.css
@@ -1,4 +1,4 @@
 .mat-mdc-button{
     font-size: 14px;
-    border-bottom: 4px solid black !important;
+    border-bottom: 4px solid rgb(4 47 46) !important;
 }
