--- a/client/src/app/components/collection/collection-single/collection-single.component.html
+++ b/client/src/app/components/collection/collection-single/collection-single.component.html
@@ -19,26 +19,30 @@
             <div class="pb-3 border-b-2 border-teal-950">
                 <div class="font-semibold">{{art.title}}</div>
                 <div class="font-semibold text-lg">
-                    <div>{{art.artist}}</div>
+                    <a *ngIf="art.artist != null" href="/artists/{{art.artist_id}}">
+                        <div class="py-1 hover:bg-teal-300 transition duration-200">
+                            {{art.artist}}
+                        </div>
+                    </a>
                     <div *ngIf="art.artist == null">Artist Unknown</div>
                 </div>
             </div>
-            <div class="p-2 py-3 text-xs text-left border-b-2 border-teal-950">
-                <div class="flex justify-between border-b-2 border-teal-950/20">
+            <div class="flex flex-col gap-1 mx-2 py-3 text-xs text-left border-b-2 border-teal-950">
+                <div class="flex justify-between border-b-2 py-1 border-teal-950/20">
                     <span class="mr-2">Date</span>
-                    <span class="font-bold">{{art.date}}</span>
+                    <span class="font-bold text-end">{{art.date}}</span>
                 </div>
-                <div class="flex justify-between border-b-2 border-teal-950/20">
+                <div class="flex justify-between border-b-2 py-1 border-teal-950/20">
                     <span class="mr-2">Origin</span>
-                    <span class="font-bold">{{art.origin}}</span>
+                    <span class="font-bold text-end">{{art.origin}}</span>
                 </div>
-                <div class="flex justify-between border-b-2 border-teal-950/20">
+                <div class="flex justify-between border-b-2 py-1 border-teal-950/20">
                     <span class="mr-2">Style</span>
-                    <span class="font-bold">{{art.style}}</span>
+                    <span class="font-bold text-end">{{art.style}}</span>
                 </div>
-                <div class="flex justify-between">
+                <div class="flex justify-between py-1">
                     <span class="mr-2">Medium</span>
-                    <span class="font-bold">{{art.medium}}</span>
+                    <span class="font-bold text-end">{{art.medium}}</span>
                 </div>
             </div>
             <div>
